--- a/css/style.css
+++ b/css/style.css
@@ -961,7 +961,6 @@ button {
   gap: 40px;
 }
 .page-nav .nav-link {
-  padding: ;
   font-size: 16px;
   line-height: 150%;
   letter-spacing: 0.02em;
@@ -1659,11 +1658,6 @@ button:focus {
     cursor: pointer;
   }
 
-  /* Стилізація мобільного меню */
-
-  /* Ховаємо мобільне меню за замовчуванням */
-
-  /* Кнопка закриття мобільного меню */
   .menu-close {
     position: absolute;
     top: 16px;
@@ -1679,11 +1673,12 @@ button:focus {
     box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08),
       0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
     background: #fff;
+    padding: 24px 16px;
   }
   .conteiner-header {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     width: 100%;
   }
   .logo {
@@ -1722,4 +1717,40 @@ button:focus {
 }
 /* ====== АДАПТИВ ДЛЯ 1158px ====== */
 @media (min-width: 1158px) {
+  .menu-toggle {
+    display: none;
+  }
+}
+
+@media (max-resolution: 2dppx) {
+  .section-page-titel {
+    background-color: #2e2f42;
+    background-image: linear-gradient(
+        to bottom,
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/Dark-bg@2.png);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    padding: 188px 0 188px;
+    height: 432px;
+  }
+}
+@media (max-resolution: 1dppx) {
+  .section-page-titel {
+    background-color: #2e2f42;
+    background-image: linear-gradient(
+        to bottom,
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/Dark-bg@1.png);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    padding: 72px 52px;
+    height: 600px;
+  }
 }
