--- a/css/style.css
+++ b/css/style.css
@@ -262,6 +262,8 @@ button {
   position: absolute;
   top: 24px;
   right: 24px;
+  border: none;
+  background-color: transparent;
 }
 
 .mobile-menu-nav {
@@ -273,6 +275,8 @@ button {
     display: none;
   }
 }
+
+/* social mobile */
 .mobile-social-list {
   margin: 0 auto;
   display: flex;
@@ -312,10 +316,149 @@ button {
 .social-link:focus {
   background-color: #404bbf;
 }
-.mobile-nav-list {
+.mobile-menu-link {
+  display: block;
+  font-weight: 700;
+  font-size: 36px;
+}
+
+.mobile-menu-list {
   display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
   flex-direction: column;
   gap: 40px;
+  margin-bottom: 169px;
+}
+.mobile-menu-link {
+  font-weight: 700;
+  font-size: 36px;
+  color: #2e2f42;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mobile-menu-link:hover,
+.mobile-menu-link:focus,
+.contacts-link:hover,
+.contacts-link:focus {
+  color: #404bbf;
+}
+.mobile-menu-container {
+  display: flex;
+  flex-direction: column;
+  gap: 48px;
+}
+.contacts-list-mobile {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  margin-bottom: 48px;
+}
+.contacts-list-mobile {
+  font-weight: 500;
+  font-size: 20px;
+  color: #434455;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.icon-mobile-close {
+  border-radius: 100%;
+  fill: #e7e9fc;
+  stroke-width: 1px;
+  stroke: #2e2f42;
+}
+/* section1 320*/
+.section-page-titel {
+  background-color: #2e2f42;
+  background-image: linear-gradient(
+      to bottom,
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/Dark-bg@1.png);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  padding: 72px 52px;
+  max-height: 432px;
+}
+.hero-titel {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+.page-title {
+  margin-bottom: 62px;
+  max-width: 216px;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11111;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #fff;
+}
+
+.button-hero {
+  background-color: #4d5ae5;
+  display: block;
+  border: none;
+  cursor: pointer;
+  border-radius: 4px;
+  padding: 16px 32px;
+  max-width: 169px;
+  max-height: 56px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  background: #4d5ae5;
+
+  font-weight: 500;
+  font-size: 16px;
+  color: #fff;
+}
+.button-hero:hover,
+.button-hero:focus {
+  background-color: #404bbf;
+  border: none;
+}
+@media screen and (min-width: 768px) {
+  .section-page-titel {
+    background-image: linear-gradient(
+        to bottom,
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/Dark-bg@2.png);
+
+    padding: 112px 136px;
+    max-width: 768px;
+    max-height: 436px;
+  }
+
+  .page-title {
+    margin-bottom: 26px;
+    max-width: 496px;
+    font-weight: 700;
+    font-size: 56px;
+  }
+}
+@media screen and (min-width: 1158px) {
+  .section-page-titel {
+    background-image: linear-gradient(
+        to bottom,
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/office1.jpg);
+
+    padding: 188px 0 188px;
+    max-height: 600px;
+    max-width: 1440px;
+  }
+
+  .page-title {
+    margin-bottom: 48px;
+    max-width: 496px;
+    font-size: 56px;
+    line-height: 107%;
+    letter-spacing: 0.02em;
+  }
 }
