--- a/css/style.css
+++ b/css/style.css
@@ -462,3 +462,91 @@ button {
     letter-spacing: 0.02em;
   }
 }
+/* section2 */
+.section-two {
+  padding: 96px 0;
+}
+
+.icon-container {
+  display: none;
+}
+.section-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: wrap;
+  flex-wrap: wrap;
+
+  gap: 72px;
+}
+.section-item-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.section-subtitel {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.1111;
+  letter-spacing: 0.02em;
+
+  color: #2e2f42;
+}
+.section-text {
+  text-align: left;
+  font-weight: 500;
+  font-size: 16px;
+
+  line-height: 1.11111;
+  letter-spacing: 0.02em;
+
+  color: #434455;
+}
+@media screen and (min-width: 768px) {
+  .section-list {
+    flex-direction: row;
+    gap: 72px 24px;
+  }
+
+  .section-item-list {
+    width: calc((100% - 24px) / 2);
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .section-two {
+    padding: 120px 0;
+    justify-content: center;
+  }
+  .icon-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 112px;
+    width: 264px;
+    background-color: #f4f4fd;
+    border-radius: 4px;
+    border: 1px solid #8e8f99;
+  }
+
+  .section-item-list {
+    background-color: #ffffff;
+    flex-basis: calc((100% - 72px) / 4);
+  }
+  .section-list {
+    gap: 24px;
+  }
+  .section-subtitel {
+    text-align: left;
+    font-weight: 500;
+    font-size: 20px;
+  }
+  .section-text {
+    font-weight: 400;
+    font-size: 16px;
+    letter-spacing: 0.01em;
+  }
+}
