--- a/css/style-old.css
+++ b/css/style-old.css
@@ -60,7 +60,7 @@ button {
   font-family: inherit;
   line-height: inherit;
 }
-.section-titel {
+.section-titel-card {
   margin-bottom: 72px;
   font-family: var(--font-family);
   font-weight: 700;
