--- a/css/style.css
+++ b/css/style.css
@@ -488,11 +488,12 @@ button {
 }
 
 .section-subtitel {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.1111;
-  letter-spacing: 0.02em;
+  text-align: center;
 
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 120%;
+  letter-spacing: 0.02em;
   color: #2e2f42;
 }
 .section-text {
@@ -548,5 +549,136 @@ button {
     font-weight: 400;
     font-size: 16px;
     letter-spacing: 0.01em;
+  }
+}
+/* section3 */
+.section-team {
+  padding: 96px 10px;
+  background-color: #f4f4fd;
+}
+.section-titel {
+  margin-bottom: 72px;
+  font-family: var(--font-family);
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 111%;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+  text-transform: capitalize;
+}
+.icon-list-item {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  gap: 72px;
+}
+.icon-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 32px;
+  border-radius: 0 0 4px 4px;
+  padding: 0px 0px 32px 0px;
+  min-width: 264px;
+  max-height: 100%;
+  width: calc((100% - 72px) / 4);
+  background-color: #fff;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+.name-title {
+  padding: 32px 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 8px;
+}
+.section-text-card {
+  text-align: center;
+  justify-content: center;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
+
+.social-list-card {
+  display: flex;
+  align-items: center;
+
+  flex-direction: row;
+  gap: 24px;
+
+  width: 232px;
+  height: 40px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.social-list-card .social-list-item-card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: #4d5ae5;
+}
+.social-list-card .social-icon-card {
+  fill: #f4f4fd;
+}
+.social-link-card {
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.social-link-card:hover,
+.social-link-card:focus {
+  background-color: #404bbf;
+}
+@media screen and (min-width: 768px) {
+  .section-team {
+    padding: 96px 92px;
+  }
+  .icon-list-item {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 64px 24px;
+  }
+  .icon-list {
+    width: calc((100% - 24px) / 4);
+  }
+}
+@media screen and (min-width: 1158px) {
+  .section-team {
+    padding: 120px 140px 120px;
+  }
+  .icon-list {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 32px;
+    border-radius: 0 0 4px 4px;
+    padding: 0px 0px 32px 0px;
+    width: 264px;
+    height: 428px;
+    width: calc((100% - 72px) / 4);
+    background-color: #fff;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    box-shadow: none;
+  }
+  .icon-list:hover,
+  .icon-list:focus {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+      0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   }
 }
