--- a/css/style.css
+++ b/css/style.css
@@ -662,17 +662,9 @@ button {
     padding: 120px 140px 120px;
   }
   .icon-list {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    gap: 32px;
-    border-radius: 0 0 4px 4px;
-    padding: 0px 0px 32px 0px;
-    width: 264px;
-    height: 428px;
+    justify-content: space-between;
     width: calc((100% - 72px) / 4);
-    background-color: #fff;
+
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     box-shadow: none;
   }
@@ -680,5 +672,11 @@ button {
   .icon-list:focus {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
       0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  }
+  .icon-list-item {
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    gap: 24px;
   }
 }
