--- a/css/style.css
+++ b/css/style.css
@@ -489,7 +489,6 @@ button {
 
 .section-subtitel {
   text-align: center;
-
   font-weight: 500;
   font-size: 20px;
   line-height: 120%;
@@ -679,4 +678,75 @@ button {
     justify-content: center;
     gap: 24px;
   }
+}
+/* section4 */
+.section-four {
+  padding: 92px 0;
+}
+.list-portfolio {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 42px;
+}
+.item-portfolio {
+  position: relative;
+  overflow: hidden;
+  display: block;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+.name-application {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+  gap: 8px;
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+
+  text-align: center;
+}
+.section-subtitel-sctf {
+  text-align: normal;
+  margin-bottom: 8px;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 120%;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
+.section-text-sctf {
+  font-weight: 400;
+  font-size: 16px;
+
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
+.hover-text {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  padding: 40px 32px;
+  background-color: #4d5ae5;
+  color: #f4f4fd;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+.image-container {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+}
+@media screen and (min-width: 768px) {
 }
