--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,17 @@ img {
   max-width: 100%;
   height: 100%;
 }
-
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: inherit;
+  font-size: 100%;
+  line-height: 1.15;
+  margin: 0;
+  padding: 0;
+}
 button {
   cursor: pointer;
 }
@@ -874,10 +884,14 @@ button {
   fill: #f4f4fd;
 }
 /* forma */
-.form-field {
+.modal-form {
   display: flex;
   flex-direction: column;
-  gap: 16px;
+  gap: 8px;
+}
+.form-field-modal {
+  display: flex;
+  flex-direction: column;
 }
 
 .text-label {
@@ -1083,12 +1097,13 @@ button {
   left: 50%;
   transform: translate(-50%, -50%);
   width: 288px;
-  height: auto;
+  height: 632px;
   background: #fcfcfc;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   padding: 72px 24px 24px;
+
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -1110,6 +1125,7 @@ button {
   cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  margin-bottom: 24px;
 }
 
 .modal-close:hover,
@@ -1142,11 +1158,9 @@ button {
 }
 
 /* 🔴 Поля форми */
-.form-field {
-  margin-bottom: 8px;
-}
+
 .comment {
-  margin-bottom: 16px;
+  margin-bottom: 8px;
 }
 /* Label */
 .form-label {
@@ -1171,7 +1185,7 @@ button {
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   background-color: transparent;
-  padding-left: 38px;
+  padding-left: 16px;
   outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -1216,7 +1230,7 @@ button {
 
 /* 🔴 Чекбокс */
 .form-checkbox {
-  margin-bottom: 24px;
+  margin-bottom: 16px;
   display: flex;
   align-items: center;
 }
@@ -1275,6 +1289,7 @@ button {
 
 /* Посилання на Privacy Policy */
 .checkbox-link {
+  line-height: 1.33333;
   color: #4d5ae5;
   text-decoration: underline;
 }
@@ -1307,4 +1322,14 @@ button {
 
 .form-submit:hover {
   background-color: #404bbf;
+}
+@media screen and (min-width: 768px) {
+  .modal {
+    width: 408px;
+    height: 584px;
+  }
+  .checkbox-label {
+    line-height: 1.16667;
+    letter-spacing: 0.04em;
+  }
 }
